--- a/CS2_External/CS2_External.vcxproj.filters
+++ b/CS2_External/CS2_External.vcxproj.filters
@@ -34,7 +34,7 @@
     <Filter Include="Utils\ConfigSaver">
       <UniqueIdentifier>{aa25e002-e95d-4db7-a900-3cd9edf6338f}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Cheats\a2x">
+    <Filter Include="a2x">
       <UniqueIdentifier>{fd8c28e8-4bd6-4c38-9562-ba895c956f46}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
@@ -136,17 +136,19 @@
       <Filter>Cheats</Filter>
     </ClInclude>
     <ClInclude Include="client.dll.hpp">
-      <Filter>Cheats\a2x</Filter>
+      <Filter>a2x</Filter>
     </ClInclude>
     <ClInclude Include="buttons.hpp">
-      <Filter>Cheats\a2x</Filter>
+      <Filter>a2x</Filter>
     </ClInclude>
     <ClInclude Include="offsets.hpp">
-      <Filter>Cheats\a2x</Filter>
+      <Filter>a2x</Filter>
     </ClInclude>
     <ClInclude Include="helper.h">
       <Filter>Utils</Filter>
     </ClInclude>
+    <ClInclude Include="OffsetsUpdater.hpp" />
+    <ClInclude Include="json.hpp" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="OS-ImGui\imgui\imgui.cpp">
